# my-mlops-test-project

./: pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
src/: train.py
tests/: test_simple.py
