[project]
name = "test-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "0nam1",email = "damonte@naver.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "scikit-learn (>=1.7.1,<2.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
